# kokkos-tiny-ranges

./: CMakeLists.txt  README.md
include/: kokkos_ranges.hpp
tests/: CMakeLists.txt  test_all.cc  test_main.cc
